[package]
name = "xpbdrs"
description = "An implementation of Extended Position Based Dynamics for cloth simulation in Rust."
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.53", features = ["derive"] }
raylib = { version="5.5.1", features= ["with_serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
