[package]
name = "xpbdrs"
description = "An implementation of Extended Position Based Dynamics for cloth simulation in Rust."
version = "0.1.0"
edition = "2024"

[lib]
name = "xpbdrs"
path = "src/lib.rs"

[[bin]]
name = "xpbdrsc"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
bitvec = "1.0.1"
clap = { version = "4.5.53", features = ["derive"] }
raylib = { version="5.5.1", features= ["with_serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
